# android-simple-realtime-player-base-on-ffmpeg

./: build.gradle  gradle.properties
app/: build.gradle
app/src/androidTest/java/io/github/gaomjun/videoplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/gaomjun/videoplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/github/gaomjun/videoplayer/: ExampleUnitTest.java
player/: CMakeLists.txt  build.gradle
player/src/androidTest/java/io/github/gaomjun/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: rtplayer.cpp
player/src/main/java/io/github/gaomjun/player/: RTPlayer.java
player/src/main/res/values/: strings.xml
player/src/test/java/io/github/gaomjun/player/: ExampleUnitTest.java
